# autoresearch-cli

./: .gitignore  Cargo.toml  README.md  program.md
.agents/skills/autoresearch/: SKILL.md
.cursor/rules/: autoresearch.mdc
.cursor/skills/autoresearch/: SKILL.md
.github/skills/autoresearch/: SKILL.md
.windsurf/rules/: autoresearch.md
src/: cli.rs  errors.rs  git.rs  main.rs
src/cmd/: agent_info.rs  best.rs  diff.rs  doctor.rs  export.rs  fork.rs  guide.rs  init.rs  install.rs  log.rs  merge_best.rs  mod.rs  record.rs  report.rs  review.rs  status.rs  watch.rs
src/output/: format.rs  mod.rs
src/skill/: mod.rs  templates.rs
