[package]
name = "autoresearch"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["199 Biotechnologies"]
license = "MIT"
description = "Universal autoresearch CLI — install skills, track experiments, view results across any AI coding agent"
readme = "README.md"
homepage = "https://github.com/199-biotechnologies/autoresearch-cli"
repository = "https://github.com/199-biotechnologies/autoresearch-cli"
keywords = ["autoresearch", "ai", "cli", "experiments", "karpathy"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "autoresearch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
owo-colors = "4"
directories = "5"
toml = "0.8"
csv = "1.3"
thiserror = "2"
dialoguer = "0.11"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
